--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -4,37 +4,32 @@ print_info() {
     info title
     info underline
 
-    info "OS" distro
-    info "Host" model
-    info "Kernel" kernel
-    info "Uptime" uptime
-    info "Packages" packages
-    info "Shell" shell
-    info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
-    info "Terminal" term
-    info "Terminal Font" term_font
-    info "CPU" cpu
-    info "GPU" gpu
-    info "Memory" memory
+    info "$(color 5)OS" distro
+    info "$(color 5)Host" model
+    info "$(color 5)Kernel" kernel
+    info "$(color 5)Uptime" uptime
+    info "$(color 5)Packages" packages
+    info "$(color 5)Shell" shell
+    info "$(color 5)Resolution" resolution
+    info "$(color 5)DE" de
+    info "$(color 5)WM" wm
+    info "$(color 5)Terminal" term
+    info "$(color 5)Terminal Font" term_font
+    info "$(color 5)CPU" cpu
+    info "$(color 5)GPU" gpu
+    info "$(color 5)Memory" memory
+    info "$(color 5)CPU Usage" cpu_usage
+    info "$(color 5)Disk" disk
+    info "$(color 5)Battery" battery
+    # info "$(color 5)Font" font
+    info "$(color 5)Song" song
+    [[ "$player" ]] && prin "$(color 5)Music Player" "$player"
+    # info "$(color 5)Local IP" local_ip
+    # info "$(color 5)Public IP" public_ip
+    # info "$(color 5)Users" users
+    # info "$(color 5)Locale" locale  # This only works on glibc systems.
 
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Battery" battery
-    # info "Font" font
-    # info "Song" song
-    # [[ "$player" ]] && prin "Music Player" "$player"
-    # info "Local IP" local_ip
-    # info "Public IP" public_ip
-    # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
-
-    info cols
+    # info cols
 }
 
 
@@ -276,7 +271,7 @@ gpu_type="all"
 # Example:
 # on:  '1920x1080 @ 60Hz'
 # off: '1920x1080'
-refresh_rate="off"
+refresh_rate="on"
 
 
 # Gtk Theme / Icons / Font
@@ -303,7 +298,7 @@ gtk_shorthand="off"
 # Example:
 # on:  'Numix [GTK2], Adwaita [GTK3]'
 # off: 'Adwaita [GTK3]'
-gtk2="on"
+gtk2="off"
 
 # Enable/Disable gtk3 Theme / Icons / Font
 #
@@ -424,7 +419,7 @@ disk_subtitle="mount"
 # xmms2d
 # xnoise
 # yarock
-music_player="auto"
+music_player="modipy"
 
 # Format to display song information.
 #
@@ -641,7 +636,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
+image_source="/Users/max/.config/laptop.txt"
 
 
 # Ascii Options
@@ -671,7 +666,7 @@ ascii_distro="auto"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(distro)
+ascii_colors=(4 6 1 8 8 6)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
